[metadata]
name = types_all
version = 1.0.0
description = A shim for the typeshed changes in mypy 0.900
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/types-all
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    types-DateTimeRange
    types-Deprecated
    types-Flask
    types-JACK-Client
    types-Jinja2
    types-Markdown
    types-MarkupSafe
    types-Pillow
    types-PyJWT
    types-PyMySQL
    types-PyYAML
    types-Routes
    types-Werkzeug
    types-aiofiles
    types-annoy
    types-atomicwrites
    types-attrs
    types-backports
    types-backports_abc
    types-bleach
    types-boto
    types-cachetools
    types-certifi
    types-characteristic
    types-chardet
    types-click
    types-click-spinner
    types-colorama
    types-contextvars
    types-croniter
    types-cryptography
    types-dataclasses
    types-dateparser
    types-decorator
    types-docopt
    types-docutils
    types-emoji
    types-enum34
    types-fb303
    types-filelock
    types-first
    types-freezegun
    types-frozendict
    types-futures
    types-geoip2
    types-ipaddress
    types-itsdangerous
    types-kazoo
    types-maxminddb
    types-mock
    types-mypy-extensions
    types-nmap
    types-openssl-python
    types-orjson
    types-paramiko
    types-pathlib2
    types-pkg_resources
    types-polib
    types-protobuf
    types-pyRFC3339
    types-pyaudio
    types-pycurl
    types-pyfarmhash
    types-pymssql
    types-pysftp
    types-python-dateutil
    types-python-gflags
    types-python-slugify
    types-pytz
    types-pyvmomi
    types-redis
    types-requests
    types-retry
    types-scribe
    types-simplejson
    types-singledispatch
    types-six
    types-tabulate
    types-termcolor
    types-toml
    types-tornado
    types-typed-ast
    types-tzlocal
    types-ujson
    types-waitress
    types-xxhash
python_requires = >=3.6.1

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
