[metadata]
name = types_all
version = 1.1.0
description = A shim for the typeshed changes in mypy 0.900
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/asottile/types-all
author = Anthony Sottile
author_email = asottile@umich.edu
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
install_requires =
    types-DateTimeRange
    types-Deprecated
    types-Flask-Cors
    types-Flask-SQLAlchemy
    types-JACK-Client
    types-Markdown
    types-Pillow
    types-PyMySQL
    types-PyYAML
    types-Pygments
    types-SQLAlchemy
    types-Send2Trash
    types-aiofiles
    types-annoy
    types-appdirs
    types-atomicwrites
    types-aws-xray-sdk
    types-babel
    types-backports.ssl-match-hostname
    types-beautifulsoup4
    types-bleach
    types-boto
    types-braintree
    types-cachetools
    types-caldav
    types-certifi
    types-chardet
    types-chevron
    types-click-spinner
    types-colorama
    types-commonmark
    types-contextvars
    types-croniter
    types-cryptography
    types-dateparser
    types-decorator
    types-dj-database-url
    types-docopt
    types-docutils
    types-editdistance
    types-emoji
    types-entrypoints
    types-first
    types-flake8-2020
    types-flake8-bugbear
    types-flake8-builtins
    types-flake8-docstrings
    types-flake8-plugin-utils
    types-flake8-rst-docstrings
    types-flake8-simplify
    types-flake8-typing-imports
    types-fpdf2
    types-freezegun
    types-gdb
    types-google-cloud-ndb
    types-hdbcli
    types-html5lib
    types-httplib2
    types-humanfriendly
    types-invoke
    types-jmespath
    types-jsonschema
    types-ldap3
    types-mock
    types-mypy-extensions
    types-mysqlclient
    types-oauthlib
    types-openpyxl
    types-opentracing
    types-paramiko
    types-parsimonious
    types-passlib
    types-passpy
    types-pep8-naming
    types-playsound
    types-polib
    types-prettytable
    types-protobuf
    types-psutil
    types-psycopg2
    types-pyOpenSSL
    types-pyRFC3339
    types-pyaudio
    types-pycurl
    types-pyfarmhash
    types-pyflakes
    types-pynput
    types-pysftp
    types-pytest-lazy-fixture
    types-python-dateutil
    types-python-gflags
    types-python-jose
    types-python-nmap
    types-python-slugify
    types-pytz
    types-pyvmomi
    types-redis
    types-regex
    types-requests
    types-retry
    types-selenium
    types-setuptools
    types-simplejson
    types-singledispatch
    types-six
    types-slumber
    types-stdlib-list
    types-stripe
    types-tabulate
    types-termcolor
    types-toml
    types-toposort
    types-tqdm
    types-ttkthemes
    types-typed-ast
    types-tzlocal
    types-ujson
    types-urllib3
    types-vobject
    types-waitress
    types-whatthepatch
    types-xmltodict
    types-xxhash
    types-zxcvbn
python_requires = >=3.7

[bdist_wheel]
universal = True

[coverage:run]
plugins = covdefaults

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false
